# AppStats-Hub

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/backend/: main.py
apps/backend/app/api/: auth.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/crud/: users.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/models/: user.py
apps/backend/app/schemas/: users.py
apps/frontend/: index.html
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: client.ts
apps/frontend/src/pages/: Home.tsx  Login.tsx  Register.tsx
